--- a/css/style.css
+++ b/css/style.css
@@ -182,3 +182,8 @@ font-family: 'Open Sans', sans-serif;
 color: white;
 margin-top: 14px;
 }
+
+button:focus {
+  outline: none;
+  background-color: #7fd9c7;
+}
